--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BulkyBook-6378B22B-D547-414C-AF7D-980AD4A179FB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=WDMNC1437;Database=BulkyBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
